# strain-off-grid

./: .gitignore  Dockerfile  main.py  pyproject.toml
config/: cardiac.toml  invivo.toml
libs/: .gitignore  ulmtools-0.1.1-cp37-abi3-manylinux_2_34_x86_64.whl
libs/imagelib/: .gitignore  CLAUDE.md  README.md  conftest.py  fsc.py  main.py  pyproject.toml
libs/imagelib/src/imagelib/: __init__.py  clahe.py  dynamic_range.py  extent.py  match_histograms.py  ndimage.py  saving.py
libs/imagelib/src/imagelib/metrics/: __init__.py  fourier_shell_correlation.py
libs/imagelib/tests/: test_extent.py  test_image.py  test_limits.py
libs/latextoolkit/: README.md  pyproject.toml
libs/plotlib/: .gitignore  CLAUDE.md  conftest.py  main.py  pyproject.toml
libs/plotlib/src/plotlib/: __init__.py  animation.py  constants.py  margins.py  plotlib.py  quicksfigs.py  ruler.py  styles.py
libs/plotlib/src/plotlib/dimensions/: __init__.py  aspect.py  dim_besides_grid.py  dim_grid.py  dim_single.py  margins.py  shape.py  spacing.py
libs/plotlib/src/plotlib/styles/: dark.mplstyle  light.mplstyle  paper.mplstyle  poster.mplstyle  template.mplstyle
libs/plotlib/tests/: test_examples.py
libs/plotlib/tests/dimensions/: test_dimensions.py
libs/storepari/: .gitignore  pyproject.toml
libs/storepari/src/storepari/: __init__.py  images.py  layer.py  points.py  saveable_dataclass.py  tracks.py  vectors.py  viewer_state.py
libs/storepari/src/storepari/cli/: loadrunshow.py
libs/storepari/tests/: test_viewer_state.py
libs/zea/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
libs/zea/.github/: dependabot.yml
libs/zea/.github/actions/load-image/: action.yml
libs/zea/.github/workflows/: build-image.yaml  docker.yaml  linter.yaml  precommits.yaml  publish.yaml  set-tag.yaml  sync-hf-configs.yaml  tests.yaml
libs/zea/configs/: README.md  config_camus.yaml  config_carotid.yaml  config_echonet.yaml  config_echonetlvh.yaml  config_picmus_iq.yaml  config_picmus_rf.yaml
libs/zea/docs/: .gitignore  Makefile  README.md  example_google_docstrings.py
libs/zea/docs/_static/: custom.css  open-anchor-dropdown.js
libs/zea/paper/: paper.bib
libs/zea/scripts/: build_all_images.sh  motd.sh  resolve_backend_versions.sh
libs/zea/tests/: __init__.py  conftest.py  helpers.py  test_agent.py  test_augmentations.py  test_autograd.py  test_backend.py  test_beamformer.py  test_caching.py  test_config_validation.py  test_configs.py  test_custom_ops.py  test_device.py  test_display.py  test_flow_matching.py  test_fnumber_mask.py  test_generate_keras_ops.py  test_generative.py  test_getting_started.py  test_gumbel.py  test_helpers.py  test_imports.py  test_io_lib.py  test_keras_ops.py  test_main.py  test_metrics.py  test_model_loading.py  test_models.py  test_notebooks.py  test_object.py  test_operations.py  test_ops_infra.py  test_parameters.py  test_pfield.py  test_pixelgrid.py  test_probes.py  test_refocus.py  test_registration.py  test_scan.py  test_selection_tool.py  (+7 more)
libs/zea/tests/data/: __init__.py  test_app.py  test_conversion_scripts.py  test_data_format.py  test_dataloader.py  test_dataset.py  test_file.py  test_file_operations.py  test_process.py  test_spec.py
libs/zea/tests/fixtures/: custom_ops.py  dotted_key_ops.py  unregistered_ops.py
libs/zea/tests/tools/: test_hf.py
libs/zea/zea/: __init__.py  __main__.py  cli_args.py  config.py  datapaths.py  display.py  doppler.py  io_lib.py  log.py  metrics.py  parameters.py  probes.py  simulator.py  utils.py  visualize.py  zea_darkmode.mplstyle
libs/zea/zea/agent/: __init__.py  gumbel.py  masks.py  selection.py
libs/zea/zea/backend/: __init__.py  autograd.py  tf2jax.py
libs/zea/zea/backend/jax/: __init__.py
libs/zea/zea/backend/tensorflow/: __init__.py  losses.py
libs/zea/zea/backend/tensorflow/layers/: apodization.py  utils.py
libs/zea/zea/backend/tensorflow/models/: lista.py
libs/zea/zea/backend/tensorflow/scripts/: convert-echonet-dynamic.py  convert-taesd.py
libs/zea/zea/backend/tensorflow/utils/: utils.py
libs/zea/zea/backend/torch/: __init__.py  losses.py
libs/zea/zea/beamform/: __init__.py  beamformer.py  lens_correction.py  pfield.py  phantoms.py  pixelgrid.py
libs/zea/zea/data/: __init__.py  __main__.py  app.py  augmentations.py  dataloader.py  datasets.py  file.py  file_operations.py  layers.py  legacy_file.py  process.py  spec.py
libs/zea/zea/data/convert/: __init__.py  __main__.py  camus.py  cetus.py  echonet.py  echoxflow.py  images.py  picmus.py  utils.py  verasonics.py
libs/zea/zea/data/convert/echonetlvh/: __init__.py  manual_rejections.txt
libs/zea/zea/func/: __init__.py  tensor.py  ultrasound.py
libs/zea/zea/internal/: _generate_keras_ops.py  cache.py  checks.py  core.py  device.py  dummy_scan.py  git_info.py  notebooks.py  operators.py  ops_list.py  parameters.py  preset_utils.py  registry.py  setup_zea.py  typing.py  utils.py  viewer.py
libs/zea/zea/internal/config/: create.py  parameters.py  validation.py
libs/zea/zea/models/: __init__.py  base.py  carotid_segmenter.py  deeplabv3.py  dense.py  diffusion.py  dit.py  echonet.py  echonetlvh.py  flow_matching.py  generative.py  gmm.py  layers.py  lpips.py  lv_segmentation.py  preset_utils.py  presets.py  regional_quality.py  speckle2self.py  taesd.py  unet.py  utils.py
libs/zea/zea/models/hvae/: __init__.py  model.py  utils.py
libs/zea/zea/ops/: __init__.py  base.py  keras_ops.py  pipeline.py  tensor.py  ultrasound.py
libs/zea/zea/tools/: __init__.py  fit_scan_cone.py  hf.py  selection_tool.py  wndb.py
libs/zea/zea/tracking/: __init__.py  base.py  block_matching.py  lucas_kanade.py  segmentation.py
shell/: run-docker.sh  sync-libs.sh
shell/in-vivo/: in-vivo-evaluate.sh  in-vivo-sweep.sh
shell/ischemic/: all.sh  ischemic-evaluate.sh  ischemic-simulate.sh  ischemic-sweep.sh
shell/ring/: all.sh  ring-evaluate.sh  ring-simulate.sh  ring-sweep.sh
src/strain_off_grid/: __init__.py  config.py  dimconvert.py  process_result.py  (+3 more)
(+46 files in other folders)
