[project]
name = "imagelib"
version = "0.1.0"
description = "Module proving an image class with various image processing methods."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "h5py>=3.1.0",
    "matplotlib>=3.0.0",
    "numpy>=1.9.0",
    "pyqt6>=6.7.1",
    "scipy>=1.1.2",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.1.1"]

