[project]
name = "storepari"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anonymous" }
]
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.16.0",
    "napari>=0.7.1",
    "numpy>=2.4.6",
    "pyqt6>=6.11.0",
    "rich>=15.0.0",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[project.scripts]
loadrunshow = "storepari.cli.loadrunshow:main"