[build-system]
requires = ["hatchling>=1.30,<2"]
build-backend = "hatchling.build"

[project]
name = "zea"
version = "0.1.0"
description = "A Toolbox for Cognitive Ultrasound Imaging. Provides a set of tools for processing of ultrasound data, all built in your favorite machine learning framework."
authors = [
    { name = "Tristan Stevens", email = "t.s.w.stevens@tue.nl" },
    { name = "Wessel van Nierop", email = "w.l.v.nierop@tue.nl" },
    { name = "Ben Luijten", email = "w.m.b.luijten@tue.nl" },
    { name = "Vincent van de Schaft", email = "v.v.d.schaft@tue.nl" },
    { name = "Oisín Nolan", email = "o.i.nolan@tue.nl" },
    { name = "Beatrice Federici", email = "b.federici@tue.nl" },
    { name = "Louis van Harten", email = "l.d.v.harten@tue.nl" },
    { name = "Simon Penninga", email = "s.w.penninga@tue.nl" },
    { name = "Noortje Schueler", email = "n.i.p.schueler@tue.nl" },
    { name = "Ruud van Sloun", email = "r.j.g.v.sloun@tue.nl" },
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
keywords = ["ultrasound", "machine learning", "beamforming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "keras >=3.12.1",
    "h5py >=3.11",
    "numpy >= 1.24",
    "matplotlib >=3.10",
    "scipy >=1.13",
    "pillow >=12.2.0",
    "tqdm >=4",
    "pyyaml >=6",
    "decorator >=5",
    "huggingface_hub >=1.2",
    "tyro >=0.9",
    "wandb >=0.18",
    "wget >=3.2",
    "imageio[ffmpeg] >=2.0",
    "grain >= 0.2.8",
    # can we make these optional or remove?
    "scikit-image >=0.23",
    "scikit-learn >=1.4",
]
[project.optional-dependencies]
dev = [
    # tests
    "pytest>=9.0.3",
    "papermill>=2.4",
    "ipykernel>=6.29.5",
    "cloudpickle>=3.1.1",
    "simpleitk>=2.2.1",
    "ipywidgets",
    "pre-commit",
    "ruff==0.15.17",
    "ty==0.0.49",
    "pytest-cov",
    # docs
    "sphinx",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx_design",
    "sphinxcontrib-autoprogram",
    "sphinx-reredirects",
    "sphinxcontrib-bibtex>=2.6.5",
    "pybtex>=0.26.1",
    "myst-parser",
    "nbsphinx",
    "furo",
    "PyStemmer",
    "IPython",
    # display
    "opencv-python-headless>=4",
    # models
    "onnxruntime>=1.15",
    # app
    "gradio>=6.0",
]

tests = [
    "pytest>=9.0.3",
    "papermill>=2.4",
    "ipykernel>=6.29.5",
    "cloudpickle>=3.1.1",
    "simpleitk>=2.2.1",
    "ipywidgets",
    "pre-commit",
    "ruff==0.15.17",
    "ty==0.0.49",
    "pytest-cov",
    "gradio>=6.0",
]
docs = [
    "sphinx",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx_design",
    "sphinxcontrib-autoprogram",
    "sphinx-reredirects",
    "sphinxcontrib-bibtex>=2.6.5",
    "pybtex>=0.26.1",
    "myst-parser",
    "nbsphinx",
    "furo",
    "PyStemmer",
    "IPython",
]
jax = ["jax[cuda12]>=0.4.35"]
display = ["opencv-python>=4"]
display-headless = ["opencv-python-headless>=4"]
# most models don't needs these optional dependencies
# but some do, so we list them here
models = ["onnxruntime>=1.15"]
app = ["gradio>=6.0"]
# these are just here for .readthedocs.yaml
# please for proper install (with GPU support)
# install manually
backends = ["jax>=0.4.35", "tensorflow>=2.12.1", "torch>=2.2"]

[project.urls]
Homepage = "https://github.com/tue-bmd/zea/"
Repository = "https://github.com/tue-bmd/zea/"

[project.scripts]
zea = "zea.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["zea"]

[tool.ruff]
# We use ruff to lint and auto-format code

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "keras_ops.py",
]

# more lenient line width than Black
line-length = 100
indent-width = 4

# minimum target python version
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F"]
ignore = [
    "E731", # Ignore ambiguous variable name globally
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]

"__init__.py" = [
    "F401", # unused imports
    "E501", # line too long
    "E402", # module level import not at top of file
]

"tests/**/__init__.py" = [
    "F403", # * imports
]

"docs/source/parameters_doc.py" = [
    "E501", # line too long
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ty]
# We use ty (https://github.com/astral-sh/ty) for static type checking.

[tool.ty.environment]
# Minimum supported Python version (see `requires-python`).
python-version = "3.10"

[tool.ty.rules]
# zea is multi-backend: jax / torch / tensorflow are optional and usually not
# all installed in the (lightweight) type-checking environment, so their
# conditional `import` statements would otherwise be flagged. Keep this visible
# as a warning rather than a hard error so it never blocks CI.
unresolved-import = "warn"

[tool.ty.src]
include = ["zea"]
exclude = ["zea/ops/keras_ops.py"] # generated file (see _generate_keras_ops)

# Keras Layer subclasses deliberately override `call` with domain-specific
# signatures; Keras dispatches through __call__ and never calls .call()
# polymorphically, so this override pattern is intentional and safe.
[[tool.ty.overrides]]
include = ["zea/ops/**/*.py", "zea/models/**/*.py", "zea/data/layers.py"]
[tool.ty.overrides.rules]
invalid-method-override = "warn"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "performance: marks tests as performance (deselect with '-m \"not performance\"')",
    "heavy: marks tests as heavy (deselect with '-m \"not heavy\"')",
    "notebook: mark a test as a notebook test (deselect with '-m \"not notebook\"')",
    "gpu: marks tests that exercise real GPU hardware (most meaningful offline; in CI CUDA_VISIBLE_DEVICES=\"\" forces CPU)",
]
filterwarnings = [
    "ignore:.*SwigPyPacked.*:DeprecationWarning",
    "ignore:.*SwigPyObject.*:DeprecationWarning",
    "ignore:.*swigvarlink.*:DeprecationWarning",
    "ignore::DeprecationWarning:jupyter_client.*",
    "ignore::DeprecationWarning:papermill.*",
    "ignore:.*__array__ implementation doesn't accept a copy keyword.*:DeprecationWarning",
    "ignore:.*os\\.fork\\(\\) was called.*:RuntimeWarning",
    "ignore:.*hf_xet.*:DeprecationWarning",
]

[tool.coverage.run]
branch = true
parallel = true
concurrency = ["multiprocessing", "thread"]
sigterm = true
omit = ["/tmp/__autograph_generated_file*.py"]

[tool.coverage.report]
omit = ["zea/ops/keras_ops.py", "zea/data/app.py"]
